# convert_reqs_to_env

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml  requirements.txt
src/: convert_reqs_to_env.py
